<resources>
    <string name="app_name">Data Manager</string>

    <!-- Activities -->
    <string name="activity_home">Home</string>

    <!--  titles -->
    <string name="tv_login_title">Login</string>
    <string name="tv_groups">Groups</string>
    <string name="tv_namespaces">Namespaces</string>
    <string name="tv_recent_files">Recent files</string>

    <!-- Hints -->
    <string name="hint_login_url">Server url</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_search">Search</string>
    <string name="hint_no_files_available">No files here</string>

    <!-- Buttons -->
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>

    <!-- Menu -->
    <string name="menu_logout">Logout</string>

    <!-- Toasts -->
    <string name="msg_logged_out">You have been logged out</string>
</resources>
